--- a/agents/lightbulb_function_ai/Dockerfile
+++ b/agents/lightbulb_function_ai/Dockerfile
@@ -4,13 +4,13 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy requirements (we'll use the main requirements.txt for now)
-COPY ../../requirements.txt .
+COPY requirements.txt .
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the application
-COPY app.py .
+COPY agents/lightbulb_function_ai/app.py .
 
 # Expose port 5002
 EXPOSE 5002
