--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   lightbulb_definition_ai:
-    build: ./agents/lightbulb_definition_ai
+    build:
+      context: .
+      dockerfile: ./agents/lightbulb_definition_ai/Dockerfile
     ports:
       - "5001:5001"
     container_name: lightbulb_definition_ai
@@ -13,7 +15,9 @@ services:
       - FLASK_APP=app.py
 
   lightbulb_function_ai:
-    build: ./agents/lightbulb_function_ai
+    build:
+      context: .
+      dockerfile: ./agents/lightbulb_function_ai/Dockerfile
     ports:
       - "5002:5002"
     container_name: lightbulb_function_ai
