Implement Enhanced Input Processor with Advanced Parser and Intent Recognizer
- Added `intent_recognizer.py` for sophisticated intent recognition with multi-intent support, context-aware detection, and confidence scoring.
- Introduced `parser.py` for advanced query parsing, including keyword/entity extraction and complexity analysis.
- Developed comprehensive unit tests for the parser, intent recognizer, ambiguity resolver, and main processor in `test_input_processor.py`.
- Created integration tests in `test_input_processor_integration.py` to verify end-to-end functionality with the existing orchestrator.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: ./agents/lightbulb_definition_ai/Dockerfile
     ports:
-      - "5001:5001"
+      - '5001:5001'
     container_name: lightbulb_definition_ai
     networks:
       - myriad_network
@@ -19,13 +19,26 @@ services:
       context: .
       dockerfile: ./agents/lightbulb_function_ai/Dockerfile
     ports:
-      - "5002:5002"
+      - '5002:5002'
     container_name: lightbulb_function_ai
     networks:
       - myriad_network
     environment:
       - FLASK_ENV=development
       - FLASK_APP=app.py
+
+  input_processor:
+    build:
+      context: .
+      dockerfile: ./processing/input_processor/Dockerfile
+    ports:
+      - '5003:5003'
+    container_name: input_processor
+    networks:
+      - myriad_network
+    environment:
+      - FLASK_ENV=development
+      - FLASK_APP=processing.input_processor.app
 
 networks:
   myriad_network:
