Implement Advanced Synthesizer and Comprehensive Unit Tests
- Added AdvancedSynthesizer class for processing multi-agent responses with various synthesis strategies.
- Introduced SynthesisParameters, AgentResponse, and SynthesisResult data classes for structured data handling.
- Developed methods for response structuring, filtering by confidence, correlation analysis, and synthesis strategy application.
- Created comprehensive unit tests for the synthesizer, formatter, and output processor components.
- Implemented integration tests to verify end-to-end functionality from input processing to final response formatting.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,19 @@ services:
       - FLASK_ENV=development
       - FLASK_APP=processing.input_processor.app
 
+  output_processor:
+    build:
+      context: .
+      dockerfile: ./processing/output_processor/Dockerfile
+    ports:
+      - '5004:5004'
+    container_name: output_processor
+    networks:
+      - myriad_network
+    environment:
+      - FLASK_ENV=development
+      - FLASK_APP=processing.output_processor.app
+
 networks:
   myriad_network:
     driver: bridge
