Add Lifecycle Manager service with Flask API
Introduces a new Lifecycle Manager service to the docker-compose stack, including its Dockerfile, Flask application, and tests. The service provides a health check endpoint and a mocked agent creation endpoint, with corresponding unit tests for both. This sets up the foundation for agent lifecycle management within the orchestration system.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,19 @@ services:
       - FLASK_ENV=development
       - FLASK_APP=processing.output_processor.app
 
+  lifecycle_manager:
+    build:
+      context: .
+      dockerfile: ./orchestration/lifecycle_manager/Dockerfile
+    ports:
+      - '5005:5005'
+    container_name: lifecycle_manager
+    networks:
+      - myriad_network
+    environment:
+      - FLASK_ENV=development
+      - FLASK_APP=orchestration.lifecycle_manager.app
+
 networks:
   myriad_network:
     driver: bridge
