Add dynamic agent creation with Docker deployment
Implements dynamic scaffolding, Docker image build, and container deployment for FactBase agents in the Lifecycle Manager. Adds a template for FactBase agents, updates the /create_agent endpoint to handle real agent creation, and enhances tests to mock Docker and file operations. Updates docker-compose to mount necessary volumes and adds the docker package to requirements.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,9 @@ services:
     container_name: lifecycle_manager
     networks:
       - myriad_network
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./agents:/app/agents
     environment:
       - FLASK_ENV=development
       - FLASK_APP=orchestration.lifecycle_manager.app
