--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,36 @@
 version: '3.8'
 
 services:
+  neo4j:
+    image: neo4j:5
+    container_name: neo4j
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    volumes:
+      - neo4j_data:/data
+    environment:
+      - NEO4J_AUTH=neo4j/password
+    networks:
+      - myriad_network
+
+  graphdb_manager_ai:
+    build:
+      context: .
+      dockerfile: ./agents/graphdb_manager_ai/Dockerfile
+    container_name: graphdb_manager_ai
+    ports:
+      - '5008:5008'
+    networks:
+      - myriad_network
+    environment:
+      - FLASK_ENV=development
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=password
+    depends_on:
+      - neo4j
+
   lightbulb_definition_ai:
     build:
       context: .
@@ -81,6 +111,9 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_APP=orchestration.agent_registry_service.app
+
+volumes:
+  neo4j_data:
 
 networks:
   myriad_network:
