--- a/agents/lightbulb_definition_ai/Dockerfile
+++ b/agents/lightbulb_definition_ai/Dockerfile
@@ -6,6 +6,9 @@ WORKDIR /app
 # Copy requirements (we'll use the main requirements.txt for now)
 COPY requirements.txt .
 
+# Install system dependencies required for building Python packages
+RUN apt-get update && apt-get install -y build-essential
+
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
