--- a/orchestration/agent_registry_service/Dockerfile
+++ b/orchestration/agent_registry_service/Dockerfile
@@ -4,6 +4,10 @@ FROM python:3.9-slim
 WORKDIR /app
 
 COPY requirements.txt .
+
+# Install system dependencies required for building Python packages
+RUN apt-get update && apt-get install -y build-essential
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY orchestration/agent_registry_service/ ./orchestration/agent_registry_service/
