--- a/processing/input_processor/Dockerfile
+++ b/processing/input_processor/Dockerfile
@@ -9,6 +9,9 @@ WORKDIR /app
 # Copy requirements first for better caching
 COPY requirements.txt .
 
+# Install system dependencies required for building Python packages
+RUN apt-get update && apt-get install -y build-essential
+
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
