--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,12 @@ services:
       - NEO4J_AUTH=neo4j/password
     networks:
       - myriad_network
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://localhost:7474 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
 
   graphdb_manager_ai:
     build:
@@ -29,7 +35,14 @@ services:
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=password
     depends_on:
-      - neo4j
+      neo4j:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5008/health').raise_for_status()"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   lightbulb_definition_ai:
     build:
@@ -69,6 +82,12 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_APP=processing.input_processor.app
+    healthcheck:
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5003/health').raise_for_status()"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   output_processor:
     build:
@@ -82,6 +101,12 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_APP=processing.output_processor.app
+    healthcheck:
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5004/health').raise_for_status()"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   lifecycle_manager:
     build:
@@ -98,6 +123,12 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_APP=orchestration.lifecycle_manager.app
+    healthcheck:
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5005/health').raise_for_status()"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   agent_registry_service:
     build:
@@ -111,6 +142,12 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_APP=orchestration.agent_registry_service.app
+    healthcheck:
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5006/health').raise_for_status()"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 volumes:
   neo4j_data:
