--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,12 @@ services:
       - NEO4J_AUTH=neo4j/password
     networks:
       - myriad_network
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:7474 || exit 1"]
+      interval: 5s
+      timeout: 10s
+      retries: 10
+      start_period: 10s
 
   graphdb_manager_ai:
     build:
@@ -29,7 +35,8 @@ services:
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=password
     depends_on:
-      - neo4j
+      neo4j:
+        condition: service_healthy
 
   integration_tester_ai:
     build:
