--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,23 @@ services:
       retries: 10
       start_period: 10s
 
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
+    networks:
+      - myriad_network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+
   graphdb_manager_ai:
     build:
       context: .
@@ -34,8 +51,11 @@ services:
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=password
+      - REDIS_URL=redis://redis:6379
     depends_on:
       neo4j:
+        condition: service_healthy
+      redis:
         condition: service_healthy
 
   integration_tester_ai:
@@ -49,10 +69,12 @@ services:
       - myriad_network
     environment:
       - FLASK_ENV=development
+      - REDIS_URL=redis://redis:6379
     depends_on:
       - graphdb_manager_ai
       - lightbulb_definition_ai
       - lightbulb_function_ai
+      - redis
 
   lightbulb_definition_ai:
     build:
@@ -108,6 +130,7 @@ services:
 
 volumes:
   neo4j_data:
+  redis_data:
 
 networks:
   myriad_network:
