--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,45 @@ services:
       retries: 5
       start_period: 5s
 
+  orchestrator:
+    build:
+      context: ./src/myriad/services/orchestrator
+      dockerfile: Dockerfile
+    container_name: myriad-orchestrator
+    ports:
+      - "5000:5000"
+    environment:
+      - FLASK_ENV=development
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=password
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_URL=redis://redis:6379
+      - GRAPHDB_MANAGER_URL=http://graphdb_manager_ai:5008
+      - INPUT_PROCESSOR_URL=http://input_processor:5003
+      - OUTPUT_PROCESSOR_URL=http://output_processor:5004
+      - ENABLE_DYNAMIC_AGENTS=true
+      - ENABLE_AUTONOMOUS_LEARNING=true
+      - HTTP_RETRIES=3
+      - HTTP_BACKOFF=0.3
+      - HTTP_POOL_MAX=20
+    depends_on:
+      neo4j:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      graphdb_manager_ai:
+        condition: service_started
+    networks:
+      - myriad_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
   graphdb_manager_ai:
     build:
       context: ./src/myriad/services/graphdb_manager
@@ -68,7 +107,9 @@ services:
     environment:
       - FLASK_ENV=development
       - REDIS_URL=redis://redis:6379
+      - ORCHESTRATOR_URL=http://orchestrator:5000
     depends_on:
+      - orchestrator
       - graphdb_manager_ai
       - lightbulb_definition_ai
       - lightbulb_function_ai
