Add Orchestrator service and communication protocol with agents
- Implement OrchestratorService to ping agents via HTTP
- Create AgentRequest and AgentResponse models for communication
- Add integration and unit tests for OrchestratorService and agents
- Update changelog with new features and improvements

--- a/tests/Myriad.Tests.Unit/Myriad.Tests.Unit.csproj
+++ b/tests/Myriad.Tests.Unit/Myriad.Tests.Unit.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Myriad.Services.Orchestrator\Myriad.Services.Orchestrator.csproj" />
     <ProjectReference Include="..\..\src\Myriad.Agents.Static.Lightbulb\Myriad.Agents.Static.Lightbulb.csproj" />
+    <ProjectReference Include="..\..\src\Myriad.Common\Myriad.Common.csproj" />
   </ItemGroup>
 
 </Project>
