--- a/src/Myriad.Agents.Static.Lightbulb/Myriad.Agents.Static.Lightbulb.csproj
+++ b/src/Myriad.Agents.Static.Lightbulb/Myriad.Agents.Static.Lightbulb.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Myriad.Common\Myriad.Common.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
