--- a/src/Myriad.Services.Orchestrator/Myriad.Services.Orchestrator.csproj
+++ b/src/Myriad.Services.Orchestrator/Myriad.Services.Orchestrator.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Myriad.Common\Myriad.Common.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
