--- a/tests/Myriad.Tests.Unit/Myriad.Tests.Unit.csproj
+++ b/tests/Myriad.Tests.Unit/Myriad.Tests.Unit.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\..\src\Myriad.Services.Orchestrator\Myriad.Services.Orchestrator.csproj" />
     <ProjectReference Include="..\..\src\Myriad.Agents.Static.Lightbulb\Myriad.Agents.Static.Lightbulb.csproj" />
     <ProjectReference Include="..\..\src\Myriad.Common\Myriad.Common.csproj" />
+    <ProjectReference Include="..\..\src\Myriad.Agents.Static.Factory\Myriad.Agents.Static.Factory.csproj" />
   </ItemGroup>
 
 </Project>
